customers section tablet issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,8 @@ ul, li {
  }
 img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
  
  .container {
@@ -493,7 +495,16 @@ height: 16px;
 /* ----------------------CUSTOMERS............... */
 
 .customers {
-    padding: 120px 0;
+    
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+    padding: 96px 15px;
+    margin: auto;
+   max-width: 428px;
+  
+   
+  
 }
 
 .customers-title {
@@ -513,7 +524,8 @@ font-weight: 700;
     display: flex;
         justify-content: center;
         align-items: center;
-        width: 168px;
+        max-width: 190px;
+        
         height: 88px;
         border: 1px solid #8E8F99;
         border-radius: 4px;
@@ -534,16 +546,26 @@ font-weight: 700;
 .customers-list {
     
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 24px;
+    flex-wrap: wrap;
+    flex-basis: calc((100% - 16px) / 2);
+    gap: 16px;
+    
+    
+   
+    /* gap: 24px; desktop*/
     
 }
 
 .customers-list-item {
     box-sizing: border-box;
-    width: calc((100% - 120px) / 6);
+    /*  desktop*/
     height 88px;
+    padding-bottom: 72px;
+    width: calc((100% - 16px) / 2);
+    
    
 }
 
@@ -1144,7 +1166,11 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
                 .benefits-list-item {
                     max-width: 396px;
                 }
-
+.customers-list-item {
+    
+    
+   
+}
     } 
         @media screen and (min-width: 768px) {
 
@@ -1156,7 +1182,7 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     .benefits-list-item {
       
         width: calc((100% - 24px) / 2);
-        max-width: 356;
+        /* max-width: 356; */
         height: 120px;
         }
                 .benefits-list {
@@ -1174,7 +1200,26 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
        
          margin-bottom: 40px;
        }
-         
+       .customers-item-container {
+        max-width: 168px;
+       
+        
+        
+       
+       }   
+       .customers-list {
+        flex-basis: calc((100% - 24px) / 3);
+        gap: 0;
+       }
+       .customers {
+        width: 768px;
+        max-width: unset;
+       }
+       .customers-list-item {
+        width: calc((100% - 24px) / 3);
+       
+       }
+     
     }
 
        @media screen and (min-width: 1158px) {
@@ -1215,8 +1260,18 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .benefits-item-text {
 
         font-weight: 400;
-       
-       
+  
     }
-
+    .customers {
+        width: 1158px;
+        display: block;
+        max-width: unset;
+padding: 120px 0; 
+    }
+    .customers-list {
+        gap: 24px;
+    }
+    .customers-list-item {
+        width: calc((100% - 120px) / 6);
+    }
     }
